2000-06-23  James Henstridge  <james@daa.com.au>

	* gtk/gtkgl.defs (use_gdk_font): fix up a few extra function names.

	* gtk/__init__.py (__all__): add extra modules to list.

	* gtk/libglade.override: import PyGtkWidget_Type so that new
	PyGtk_Check's work correctly.

	* gtk/gtkobject-support.c: fix uses of PyGtk_Check.

	* gtk/gtk.override: change all uses of PyGtk_Check to take the
	extra type parameter.

	* codegen/argtypes.py (ObjectArg.__init__): check correct subclass
	in generated code.

	* gtk/pygtk.h (PyGtk_Check): function to check for subclasses of a
	particular GtkObject type.

	* examples/glade/glade.py (win): update glade example to use libglade.

	* gtk/gtk.override (_wrap_gtk_widget_draw): implementation.

	* gtk/gtk-extrafuncs.defs (get_allocation): add extra compatibility
	method.

	* examples/gl/*.py: update examples with s/gtkgl/gtk.gl/

	* gtk/Makefile.am: add rules to build gtk.gl.

	* gtk/gtkglmodule.c (initgl): initialise lots of constants.

	* gtk/gtkgl.defs, gtk/gtkgl.override, gtk/gtkglmodule.c: wrapper for
	gtkglarea.

2000-06-22  James Henstridge  <james@daa.com.au>

	* gtk/libglade.override: add initialisation code to import GtkData
	base class.
	Add signal connection implementations.

	* codegen/codegen.py (write_source): fix up handling of registering
	subclasses when base class is not defined in this module.  Some help
	from the .override file will be needed.

2000-06-21  James Henstridge  <james@daa.com.au>

	* gtk/Makefile.am ($(srcdir)/libglade.c): read in gtk.defs for
	definitions before parsing libglade.defs.

	* codegen/codegen.py (__main__): allow reading of another defs
	file to read in its definitions without generating source code for
	it.

	* gtk/libglade.override, gtk/libglade.defs, gtk/libglademodule.c:
	start of libglade module.

	* codegen/mkskel.py: fix up skeleton generator a bit.

2000-06-20  James Henstridge  <james@daa.com.au>

	* examples/...: updated a few examples.
